openshift/kompose/web-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.service.expose: flask-ex
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    io.kompose.service: web
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: APPLICATION_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: APPLICATION_DOMAIN
                  name: web-variables-env
            - name: APP_DB_ENGINE
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_ENGINE
                  name: web-variables-env
            - name: APP_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_NAME
                  name: web-variables-env
            - name: APP_DB_PASS
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_PASS
                  name: web-variables-env
            - name: APP_DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_PORT
                  name: web-variables-env
            - name: APP_DB_SERVICE_NAME
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_SERVICE_NAME
                  name: web-variables-env
            - name: APP_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: APP_DB_USER
                  name: web-variables-env
            - name: APP_DEBUG
              valueFrom:
                configMapKeyRef:
                  key: APP_DEBUG
                  name: web-variables-env
            - name: APP_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: APP_SECRET_KEY
                  name: web-variables-env
            - name: FLASK_APP
              value: /opt/app-root/src/wsgi.py
          image: ' '
          name: web
          ports:
            - containerPort: 8080
          resources: {}
          workingDir: /opt/app-root/src
      restartPolicy: Always
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - web
        from:
          kind: ImageStreamTag
          name: web:latest
      type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
