openshift/kompose/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.expose: flask-ex
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
